# naboo

./: .gitignore  README.md  pyproject.toml
docs/: 01-stock-robot.md  02-adding-a-brain.md  03-faster-brain.md  _config.yml  index.md
infra/: .env.example
infra/certs/: README.md
naboo/: __main__.py  agent.py  config.py
naboo/memory/: MEMORY.md  README.md  memory_loader.py
naboo/memory/family/: lev.md  ziggy.md
naboo/prompts/: system_prompt.txt
naboo/router/: __init__.py  model_router.py  query_classifier.py
naboo/tools/: __init__.py  strands_tools.py
scripts/: test_e2e.py
